[workspace]
members = []
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

missing_errors_doc = "allow"
new_without_default = "allow"
missing_const_for_fn = "allow"

# Horrendous Hackery
[profile.dev]
overflow-checks = false
